--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "Roboto", "sans-serif";
 }
@@ -15,6 +14,12 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
+    max-width: 840px;
+}
+
+main img {
+    width: 150px;
+    height: auto;
 }
 
 h1 {
@@ -29,4 +34,26 @@ img {
 
 p {
     grid-column: 1/3;
+    padding: 0;
+}
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0 0 0 / 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
 }
